@@ -2,8 +2,8 @@ Place in this directory things that are experimental.
 
 And by experimental I mean:
   * features that needs more testing. eg: something that breaks compatibility
-  * features that are not complete. eg: Actions that don't support reverse
+  * features that are not complete. eg: Actions that don't support reverse, the don't look good, needs more polish, etc.
   * features that have important bugs. eg: memory leaks
 
-
-Please, add a way to test these features
+Think of this place like a playground, to test some ideas that you think it might
+benefit other users.
